plugins {
    id 'java-library'
    id 'application'
    id 'com.google.protobuf' version '0.9.5'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:3.25.5'
    }
    plugins {
        grpc {
            artifact = 'io.grpc:protoc-gen-grpc-java:1.74.0'
        }
    }
    generateProtoTasks {
        all()*.plugins {
            grpc {}
        }
    }
}

def baseName =  'app-openbis-drive'
def implementationVersion = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

javafx.version = "21.0.6"

evaluationDependsOn(':lib-json')
evaluationDependsOn(':api-data-store-server-java')

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}

//tasks.register('compileAvroSchemas', Exec) {
//    executable "java"
//    args "-jar",
//            "util/avro-tools-1.12.0.jar",
//            "compile",
//            "protocol",
//            "./src/main/resources/avro/drive-api.avpr",
//            "./src/main/java"
//}
//
//build {
//    dependsOn("compileAvroSchemas")
//}

repositories {
    ivy {
        ivyPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/main/[organisation]/[module]/[revision]/ivy.xml"
        artifactPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/main/[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"
    }
    mavenCentral()
}

dependencies {
    annotationProcessor("org.projectlombok:lombok:1.18.38")

    compileOnly("org.projectlombok:lombok:1.18.38")
    testCompileOnly("org.projectlombok:lombok:1.18.38")
    testAnnotationProcessor("org.projectlombok:lombok:1.18.38")

    api(project(":lib-json"))
    api(project(":api-openbis-java"))

    implementation("org.xerial:sqlite-jdbc:3.50.2.0")
    implementation("commons-cli:commons-cli:1.10.0")
    api("slf4j:slf4j-api:1.7.24")
    api("org.slf4j:slf4j-nop:1.7.24")

    //GOOGLE PROTOBUF
    implementation("com.google.protobuf:protobuf-java:4.31.1")
    implementation("io.grpc:grpc-netty-shaded:1.74.0")
    implementation("io.grpc:grpc-protobuf:1.74.0")
    implementation("io.grpc:grpc-stub:1.74.0")
    compileOnly ("org.apache.tomcat:annotations-api:6.0.53") // necessary for Java 9+

    //JAVAFX
    implementation("org.openjfx:javafx-base:${javafx.version}:linux")
    implementation("org.openjfx:javafx-base:${javafx.version}:win")
    implementation("org.openjfx:javafx-base:${javafx.version}:mac")
    implementation("org.openjfx:javafx-graphics:${javafx.version}:linux")
    implementation("org.openjfx:javafx-graphics:${javafx.version}:win")
    implementation("org.openjfx:javafx-graphics:${javafx.version}:mac")
    implementation("org.openjfx:javafx-fxml:${javafx.version}:linux")
    implementation("org.openjfx:javafx-fxml:${javafx.version}:win")
    implementation("org.openjfx:javafx-fxml:${javafx.version}:mac")
    implementation("org.openjfx:javafx-controls:${javafx.version}:linux")
    implementation("org.openjfx:javafx-controls:${javafx.version}:win")
    implementation("org.openjfx:javafx-controls:${javafx.version}:mac")
    implementation("org.controlsfx:controlsfx:11.2.1")

    testImplementation("junit:junit:4.13.1")
    testImplementation("org.mockito:mockito-core:4.4.0")
    testImplementation( 'hamcrest:hamcrest-core:1.3')
    testImplementation('hamcrest:hamcrest-integration:1.3')
    testImplementation('hamcrest:hamcrest-library:1.3')
}

tasks.named('jar', Jar) {
    manifest {
        attributes(
                'Implementation-Title':   baseName,
                'Implementation-Version': implementationVersion
        )
    }
}

tasks.named('distTar') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('distZip') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('layReleaseDirectoriesOut') {
    mkdir('build/release')
    mkdir('build/release/installer-resources')
    mkdir('build/release/installer-release')
}

tasks.register('copyInstallerResources', Copy) {
    dependsOn('layReleaseDirectoriesOut')
    from('installer-resources')
    into('build/release/installer-resources')
}

tasks.register('appOpenbisDriveFullJar', Jar) {
    zip64 = true;
    dependsOn('build')

    manifest {
        attributes(
                'Implementation-Title':   baseName + '-service',
                'Implementation-Version': implementationVersion,
                'Main-Class': 'ch.openbis.drive.DriveAPICmdLineApp'
        )
    }
    archiveBaseName = baseName + '-full'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

tasks.register('copyFullJarToInstallerResources', Copy) {
    dependsOn('copyInstallerResources')
    dependsOn('appOpenbisDriveFullJar')

    from('build/libs/' + baseName + '-full.jar')
    into('build/release/installer-resources/include')
}

tasks.register('jpackageOnLinux', Exec) {
    dependsOn('copyFullJarToInstallerResources')

    workingDir = 'build/release/installer-resources'
    commandLine = [
        'jpackage',
        '-i', 'include',
        '-d', 'include',
        '-n', 'openbis-drive',
        '--main-class', 'ch.openbis.drive.ProxyLauncher',
        '--main-jar', baseName + '-full.jar',
        '--icon', 'openbis-drive-icon-small.png',
        '--app-version', implementationVersion,
        '--description', 'Synchronization tool for openBIS',
        '--linux-shortcut'
    ]

    doLast {
        copy {
            from('build/release/installer-resources/include')
            include('README.md', 'openbis-drive*' + implementationVersion + '*.deb')
            into('build/release/installer-release')
        }
    }
}

tasks.register('releaseOnLinux', Tar) {
    dependsOn('jpackageOnLinux')

    archiveFileName = baseName + '-' + implementationVersion+ '-linux.tar.gz'

    from 'build/release/installer-release'
    compression = Compression.GZIP
}

tasks.register('jpackageOnMacOS', Exec) {
    dependsOn('copyFullJarToInstallerResources')

    workingDir = 'build/release/installer-resources'
    commandLine = [ // jpackage on MAC-OS complains if major number of "implementationVersion" is 0 or negative
        'jpackage',
        '-i', 'include',
        '-d', 'include',
        '-n', 'openbis-drive',
        '--main-class', 'ch.openbis.drive.ProxyLauncher',
        '--main-jar', baseName + '-full.jar',
        '--icon', 'openbis-drive-icon.icns',
        '--app-version', implementationVersion,
        '--description', 'Synchronization tool for openBIS',
    ]

    doLast {
        copy {
            from('build/release/installer-resources/include')
            include('README.md', 'openbis-drive*' + implementationVersion + '*.dmg')
            into('build/release/installer-release')
        }
    }
}

tasks.register('releaseOnMacOS', Tar) {
    dependsOn('jpackageOnMacOS')

    archiveFileName = baseName + '-' + implementationVersion+ '-mac.tar.gz'

    from 'build/release/installer-release'
    compression = Compression.GZIP
}

tasks.register('jpackageOnWindows', Exec) {
    dependsOn('copyFullJarToInstallerResources')

    workingDir = 'build/release/installer-resources'
    commandLine = [
        'jpackage',
        '-i', 'include',
        '-d', 'include',
        '-n', 'openbis-drive',
        '--main-class', 'ch.openbis.drive.ProxyLauncher',
        '--main-jar', baseName + '-full.jar',
        '--icon', 'openbis-drive-icon-small.ico',
        '--app-version', implementationVersion,
        '--description', 'Synchronization tool for openBIS',
        '--win-menu',
        '--win-shortcut-prompt',
        '--add-launcher', 'openbis-drive-cmd="openbis-drive-cmd.jpackage.properties"'
    ]

    doLast {
        copy {
            from('build/release/installer-resources/include')
            include('README.md', 'openbis-drive*' + implementationVersion + '*.exe')
            into('build/release/installer-release')
        }
    }
}

tasks.register('releaseOnWindows', Tar) {
    dependsOn('jpackageOnWindows')

    archiveFileName = baseName + '-' + implementationVersion+ '-win.tar.gz'

    from 'build/release/installer-release'
    compression = Compression.GZIP
}

tasks.register('openBISDevelopmentEnvironmentDriveServerStart', JavaExec) {
    mainClass = 'ch.openbis.drive.DriveAPIService'
    classpath = sourceSets.main.runtimeClasspath
}

// Note: in development mode, the graphical interface cannot start the background process: use Gradle task
// 'openBISDevelopmentEnvironmentDriveServerStart' instead
tasks.register('openBISDevelopmentEnvironmentDriveGUIStart', JavaExec) {
    environment('OPENBIS_DRIVE_DEV_MODE','true')
    mainClass = 'ch.openbis.drive.gui.Launcher'
    classpath = sourceSets.main.runtimeClasspath
}

// Launch with arguments, for example:
// > ./gradlew openBISDevelopmentEnvironmentDriveCommandLine --args=status
// > ./gradlew openBISDevelopmentEnvironmentDriveCommandLine --args='notifications --limit=5'
// Note: 'start' and 'stop' commands do not work in development mode: use Gradle task
// 'openBISDevelopmentEnvironmentDriveServerStart' instead
tasks.register('openBISDevelopmentEnvironmentDriveCommandLine', JavaExec) {
    environment('OPENBIS_DRIVE_DEV_MODE','true')
    mainClass = 'ch.openbis.drive.DriveAPICmdLineApp'
    classpath = sourceSets.main.runtimeClasspath
}


/////////////////////////////////////////////////////////////////////////////////////////
//MANUAL INSTALLATION RELEASE (useful for development or non-standard environments) /////
/////////////////////////////////////////////////////////////////////////////////////////
tasks.register('manualRelease', Tar) {
    dependsOn('copyInstallScripts')
    dependsOn('copyLaunchScripts')
    dependsOn('appOpenbisDriveFullJar')

    doFirst {
        copy {
            from('build/libs/' + baseName + '-full.jar')
            into('build/manual-release/launch-scripts')
        }
    }

    archiveFileName = baseName + '-' + implementationVersion+ ".tar.gz"

    from 'build/manual-release'
    compression = Compression.GZIP
}

tasks.register('layManualReleaseDirectoriesOut') {
    mkdir('build/manual-release')
    mkdir('build/manual-release/launch-scripts')
}

tasks.register('copyLaunchScripts', Copy) {
    dependsOn('layManualReleaseDirectoriesOut')
    from('launch-scripts')
    into('build/manual-release/launch-scripts')
}

tasks.register('copyInstallScripts', Copy) {
    dependsOn('layManualReleaseDirectoriesOut')
    from('install-scripts')
    into('build/manual-release')
}
/////////////////////////////////////////////////////////////////////////////////////////
